Movin/renaming files + minor changes

--- a/src/components/coin_list/coin/coin-header/CoinHeader.css
+++ b/src/components/coin_list/coin/coin-header/CoinHeader.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'CeraRoundProLight';
-    src: url(../../assets/TypeMates\ \ CeraRoundProLight.otf);
+    src: url(../../../../assets/TypeMates\ \ CeraRoundProLight.otf);
   }
 
 .coin-header {
