Bulk Changes. App on test mode.

--- a/src/components/coin_list/coin/coin-header/CoinHeader.css
+++ b/src/components/coin_list/coin/coin-header/CoinHeader.css
@@ -51,3 +51,8 @@
     font-family: 'CeraRoundProLight';
     margin-right: .5rem;
 }
+
+.green-btn {
+    background-color: #4be2a3 !important;
+    color: #273667 !important;
+}
