Reordering file structure

--- a/src/components/market/coin-list/coin/Coin.css
+++ b/src/components/market/coin-list/coin/Coin.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'CeraRoundProRegular';
-    src: url(../../../assets/TypeMates\ \ CeraRoundProRegular.otf);
+    src: url(../../../../assets/TypeMates\ \ CeraRoundProRegular.otf);
   }
 
 .item-container { 
