--- a/src/components/market/coin-list/coin/coin-details/CoinDetails.css
+++ b/src/components/market/coin-list/coin/coin-details/CoinDetails.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'CeraRoundProThin';
-    src: url(../../../../assets/TypeMates\ \ CeraRoundProThin.otf);
+    src: url(../../../../../assets/TypeMates\ \ CeraRoundProThin.otf);
   }
 
 
