NavBar and Points layout fixed

--- a/src/components/App/get-more-coins/get-more-coins-card/GetMoreCoinsCard.css
+++ b/src/components/App/get-more-coins/get-more-coins-card/GetMoreCoinsCard.css
@@ -32,12 +32,12 @@
   margin-left: 2rem;
 }
 
-ul {
+.get-more-coins-card-body > ul {
   padding: 0 1rem 2rem 1rem;
   margin: 0;
 }
 
-li {
+.get-more-coins-card-body > ul > li {
   margin-top: 1rem;
 }
 
