--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,32 +1,39 @@
+.App-wrapper {
+  position: relative;
+  height: 30rem;
+  width: 44rem;
+  overflow: hidden;
+  border-radius: 0.5rem;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  padding: 2rem;
+}
+
 .App {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    height: 30rem;
-    width: 44rem;
-    background-color: white;
-    padding: 2rem;
-    border-radius: .5rem;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    overflow: hidden;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+}
+
+.navbar-wrapper {
+  display: flex;
 }
 
 .refresh-icon {
-    margin-top: 2rem;
+  margin-top: 2rem;
 }
 
 .rotating {
-    animation: rotating 1s infinite;
+  animation: rotating 1s infinite;
 }
 
 @keyframes rotating {
-    from {
-        transform: rotate(0);
-    }
+  from {
+    transform: rotate(0);
+  }
 
-    to {
-        transform: rotate(360deg);
-    }
+  to {
+    transform: rotate(360deg);
+  }
 }
